Revert "Remove SSH and fix TODO in node-repo ACL rules "